Make footer sticky to bottom of page. TODO: Prevent elements from sliding behind footer.

--- a/public/css/layout.css
+++ b/public/css/layout.css
@@ -1,5 +1,7 @@
 body {
+	position: relative;
 	min-height: 100%;
+	min-height: 100vh;
 	font-family: sans-serif;
 	font-size: 20px;
 	line-height: 1.5;
@@ -13,7 +15,7 @@ body {
 .container {
 	width: 80%;
 	margin: auto;
-	overflow: hidden;
+	overflow: auto;
 }
 
 .box {
@@ -195,6 +197,12 @@ header a:hover {
 
 /*Individual Blog Page*/
 
+#blog img {
+	float: right;
+	margin-top: 1em;
+	margin-left: 3em;
+}
+
 #blog button {
 	float: left;
 }
@@ -203,14 +211,13 @@ header a:hover {
 	margin-left: 10px;
 }
 
-#blog img {
-	margin: 2rem;
-	float: right;
-}
-
 /* Footer */
 
 footer {
+	position: absolute;
+	right: 0;
+	bottom: 0;
+	left: 0;
 	background-color: #828A95;
 	min-height: 70px;
 	color: white;
@@ -243,7 +250,8 @@ footer nav {
 	header li,
 	footer nav,
 	footer li, 
-	.featured-blog img {
+	.featured-blog img,
+	#blog img {
 		float: none;
 		text-align: center;
 		width: 100%;
